- Changed order microservice to have image and extended product (#65)
